--- a/src/patternfly/components/NotificationDrawer/notification-drawer-list-item-header-title.hbs
+++ b/src/patternfly/components/NotificationDrawer/notification-drawer-list-item-header-title.hbs
@@ -11,8 +11,8 @@
       Danger notification:
     {{else if notification-drawer-list-item--IsSuccess}}
       Success notification:
-    {{else if notification-drawer-list-item--IsDefault}}
-      Default notification:
+    {{else if notification-drawer-list-item--IsCustom}}
+      Custom notification:
     {{/if}}
   </span>
   {{> @partial-block}}
