--- a/src/patternfly/components/Popover/popover-title-text.hbs
+++ b/src/patternfly/components/Popover/popover-title-text.hbs
@@ -4,8 +4,8 @@
   {{/if}}>
     {{#if popover--IsAlert}}
       {{#> screen-reader}}
-      {{#if popover--IsDefaultAlert}}
-        Default
+      {{#if popover--IsCustomAlert}}
+        Custom
       {{else if popover--IsInfoAlert}}
         Info
       {{else if popover--IsSuccessAlert}}
