feat(page): added multiple body support (#5093)
* feat(page): added multiple body support

* feat(page): updated body mods

* feat(page): updated body mods/added new mods

* feat(page): udpated sidebar body customizations

* feat(page): updated insets to match

* update

* update

* feat(Page): addressed comment

---------

Co-authored-by: Eric Olkowski <thatblindgeye@gmail.com>

--- a/src/patternfly/components/Page/examples/Page.css
+++ b/src/patternfly/components/Page/examples/Page.css
@@ -6,6 +6,12 @@
   color: var(--pf-global--Color--dark-100);
 }
 
-#ws-core-c-page-with-or-without-fill .ws-preview-html {
+#ws-core-c-page-with-or-without-fill .ws-preview-html,
+#ws-core-c-page-multiple-sidebar-body-elements-padding-and-fill .ws-preview-html {
   height: 500px;
+}
+
+#ws-core-c-page-multiple-sidebar-body-elements .ws-preview-html,
+#ws-core-c-page-using-flex-layout .ws-preview-html {
+  height: 100%;
 }
