feat(helper-text): remove some extra HasIcon

--- a/src/patternfly/demos/Alert/alert-template-horizontal-form.hbs
+++ b/src/patternfly/demos/Alert/alert-template-horizontal-form.hbs
@@ -50,7 +50,7 @@
       {{/form-label}}
     {{/form-group-label}}
     {{#> form-group-control}}
-      {{> form-helper-text helper-text--value='This is a required field' helper-text-item--IsError=true helper-text-item--HasIcon=true}}
+      {{> form-helper-text helper-text--value='This is a required field' helper-text-item--IsError=true}}
       {{#> check}}
         {{#> check-input check-input--attribute='type="checkbox" id="alt-checkbox1" name="alt-checkbox1"'}}{{/check-input}}
         {{#> check-label check-label--attribute='for="alt-checkbox1"'}}Follow up via email.{{/check-label}}
